--- a/Practice_Question_Code.ipynb
+++ b/Practice_Question_Code.ipynb
@@ -160,7 +160,7 @@
     "            f.write('\\n')\n",
     "    \n",
     "    # Printing to Terminal to get the progress.\n",
-    "    print(\"Done \",files[i],\"\\nScore :\",score)\n",
+    "    print(\"Done \",files[i],\"\\nScore :\",bestscore)\n",
     "    \n",
     "# Printing for 'THE END'.\n",
     "print(\"All Done\")"
